--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
 
-body p, a, div, section, section, img, h1, h2, h3 {
-    padding: 0px;
-    margin: 0px;
-    border: 0px;
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
     text-decoration: none;
 }
 
 body {
     display: flex;
+    margin: 0;
     min-height: 100vh;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
 
     font-family: 'Barlow Semi Condensed', sans-serif;
@@ -19,8 +22,6 @@ body {
 .reviews-container {
     max-width: 1200px;
     max-height: 696px;
-    margin: 0 auto;
-    margin-bottom: 150px;
     display: grid;
     gap: 30px;
     padding: 30px;
@@ -80,7 +81,6 @@ body {
     top: 0px;
 
     min-width: 20.5%;
-
 }
 
 .reviews-container .item1 article {
@@ -100,14 +100,11 @@ body {
 }
 
 .reviews-container .item4 {
-    /* grid-column: span 2; */
     background-color: #18202d;
     grid-area: item4;
 }
 
 .reviews-container .item5 {
-    /* grid-column: 4;
-    grid-row: 1 / 3; */
     background-color: white;
     grid-area: item5    ;
 }
