--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 
 .reviews-container {
     max-width: 1200px;
-    max-height: 696px;
     display: grid;
     gap: 30px;
     padding: 30px;
@@ -47,6 +46,7 @@ body {
 
 @media (max-width: 650px) {
     .reviews-container {
+        margin-bottom: 4em;
         grid-template-columns: 1fr;
         grid-template-areas: 
         "item1"
@@ -118,6 +118,8 @@ body {
     align-items: center;
     margin-bottom: 15px;
     height: 40px;
+    position: relative;
+    z-index: 1;
 }
 
 .profile-info > img {
